# ZOKATA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
include/ZokataEngine/: Engine.h
include/ZokataEngine/systems/scene/: Component.h  Entity.h  Scene.h  SceneLoader.h  SceneManager.h
include/ZokataEngine/systems/scene/components/: CameraComponent.h  MeshComponent.h  TransformComponent.h
include/ZokataEngine/systems/scene/components/Primitives/: MeshPrimitives.h
include/ZokataLog/: Log.h
include/ZokataMath/: MathUtils.h  Matrix.h  Quaternion.h  Vector.h
include/ZokataRenderer/: Application.h
include/ZokataRenderer/graphics/: ImGuiLayer.h  VulkanContext.h  Window.h
include/ZokataRenderer/graphics/renderer/: DeferredRenderer.h  PathTracerRenderer.h  Renderable.h  Renderer.h
include/ZokataRenderer/graphics/vk/: Device.h  FrameSync.h  Instance.h  Swapchain.h
scenes/: debugScene.yaml
src/ZOKATA/: main.cpp
src/ZokataEngine/: Engine.cpp
src/ZokataEngine/systems/scene/: Component.cpp  Entity.cpp  Scene.cpp  SceneLoader.cpp  SceneManager.cpp
src/ZokataEngine/systems/scene/components/: CameraComponent.cpp  MeshComponent.cpp  TransformComponent.cpp
src/ZokataEngine/systems/scene/components/Primitives/: MeshPrimitives.cpp
src/ZokataLog/: Log.cpp
src/ZokataMath/: Math.cpp  MathUtils.cpp  Matrix.cpp  Quaternion.cpp
src/ZokataRenderer/: Application.cpp
src/ZokataRenderer/graphics/: ImGuiLayer.cpp  VulkanContext.cpp  Window.cpp
src/ZokataRenderer/graphics/renderer/: DeferredRenderer.cpp  PathTracerRenderer.cpp  Renderable.cpp  Renderer.cpp
src/ZokataRenderer/graphics/vk/: Device.cpp  FrameSync.cpp  Instance.cpp  Swapchain.cpp
